--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_maps_flutter: ^2.4.0
   mocktail: ^1.0.0
   geocoding: ^2.0.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
